client/src/components/Nav/Nav.css
.nav-logo-link,
.nav-link {
  text-decoration: none;
  font-weight: 500;
}

.nav-logo-link:visited,
.nav-link:visited {
  text-decoration: none;
  color: darkslategray;
}

.nav-link {
  color: black;
  text-decoration: none;
  margin: 10px;
}

.nav-logo-img {
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
}

@media screen and (max-width: 900px) {
  .nav-link {
    display: none;
  }

  .nav-mobile-link {
    color: black;
    text-decoration: none;
  }

  .nav-mobile-link:visited {
    color: black;
  }

  .nav-logo-link {
    display: flex;
    justify-content: left;
    align-items: center;
  }

  .welcome-user {
    display: flex;
    justify-content: center;
  }

  .nav-logo-img {
    padding: 10px 0 10px 10px;
    max-width: 225px;
  }

  .welcome-user-full-screen {
    display: none;
  }
}

@media screen and (min-width: 901px) {
  .mobileNav {
    display: none;
  }
  .nav-logo-img {
    padding-top: 10px;
    max-width: 250px;
  }
}

.drawer {
  width: 250px;
}

